--- a/app/layouts/default.jade
+++ b/app/layouts/default.jade
@@ -2,7 +2,7 @@ doctype html
 html.no-js
 head
     meta(charset='utf-8')
-    title My Webapp
+    title TWM
     meta(name='description' content='')
     meta(name='viewport' content='width=device-width, initial-scale=1')
     // Place favicon.ico and apple-touch-icon.png in the root directory
@@ -22,7 +22,7 @@ head
 
 body
     | <!--[if lt IE 10]>
-    |                 <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+    |     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     | <![endif]-->
     nav.navbar.navbar-inverse.navbar-fixed-top
         .container
@@ -32,8 +32,8 @@ body
                     span.icon-bar
                     span.icon-bar
                     span.icon-bar
-                a.navbar-brand(href="#") Project name
-            div#navbar.navbar-collapse collapse
+                a.navbar-brand(href="#") TeamWithMe
+            div#navbar.navbar-collapse
                 form.navbar-form.navbar-right
                     .form-group
                         input.form-control(type="text" placeholder="Email")
@@ -44,8 +44,10 @@ body
     // Main jumbotron for a primary marketing message or call to action
     .jumbotron
         .container
-            h1 Hello, world!
-            p This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.
+            h1 Looking for a team?
+            p.
+                TeamWithMe is the first website dedicated to finding for hackathon hackers.
+                Sign up to begin.
             p
                 a.btn.btn-primary.btn-lg(href="#" role="button") Learn more »
 
@@ -68,7 +70,7 @@ body
                 p
                     a.btn.btn-default(href="#" role="button") View details »
 
-    <hr>
+    hr
 
     // TODO: Azure analytics
 
