--- a/app/layouts/default.jade
+++ b/app/layouts/default.jade
@@ -27,11 +27,6 @@ body
     nav.navbar.navbar-inverse.navbar-fixed-top
         .container
             .navbar-header
-                button.navbar-toggle.collapsed(type="button" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar")
-                    span.sr-only Toggle navigation
-                    span.icon-bar
-                    span.icon-bar
-                    span.icon-bar
                 a.navbar-brand(href="#") TeamWithMe
             div#navbar.navbar-collapse
                 form.navbar-form.navbar-right
@@ -44,12 +39,11 @@ body
     // Main jumbotron for a primary marketing message or call to action
     .jumbotron
         .container
-            h1 Looking for a team?
+            h1 TeamWithMe
             p.
-                TeamWithMe is the first website dedicated to finding for hackathon hackers.
-                Sign up to begin.
+                Hackathon teams made easy
             p
-                a.btn.btn-primary.btn-lg(href="#" role="button") Learn more »
+                a.btn.btn-primary.btn-lg(href="#" role="button") Sign Up »
 
     .container
         // Example row of columns
